# conect-dev-capsule

./: PLAN.md  README.md  pyproject.toml
.codeocean/: datasets.json  environment.json
code/: assets_hdf5.json  assets_zarr.json  context_modulated_baseline_units.csv  dynamic_routing_tutorial.ipynb  export_notebook_no_code.py  find_context_modulated_quiescent_units.py  generate_session_metadata.py  metadata.csv  nwb_access.py  run  test_nwb_access.py  test_unit_raster.py  unit_raster_psth_plot.py  write_nwb_metadata.py
environment/: Dockerfile  postInstall
environment/files/: mcp.json  vscode_machine_settings.json
