[project]
name = "conect-dev-capsule"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=6.1.0",
    "ipykernel>=7.2.0",
    "lazynwb==1.0.0dev1",
    "matplotlib",
    "numpy",
    "polars",
    "polars-vec-ops>=0.1.8",
]
